--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
        "module": "ESNext",
        "declaration": true,
        "declarationDir": "dist",
-       "strict": true
-    
+       "strict": true,
+       "allowSyntheticDefaultImports": true,
     
     }
 }
